[gd_scene load_steps=12 format=2]

[ext_resource path="res://JetpackGameMode/Character/Bullet_RayCast.gd" type="Script" id=1]
[ext_resource path="res://JetpackGameMode/Character/Fxs/FullLaser.png" type="Texture" id=2]
[ext_resource path="res://JetpackGameMode/Character/Fxs/LaserParticle.png" type="Texture" id=3]
[ext_resource path="res://CommonScenes/SoundManager/SfxPlayer.gd" type="Script" id=4]
[ext_resource path="res://CommonScenes/SoundManager/sfx/laser_firing.wav" type="AudioStream" id=5]
[ext_resource path="res://CommonScenes/SoundManager/sfx/enemy_laser_loop.wav" type="AudioStream" id=6]

[sub_resource type="Animation" id=1]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("LaserBody:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1.5 ), Vector2( 1, 0.3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("LaserTip:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1.5 ), Vector2( 1, 0.3 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("LaserParticlesTop:modulate:a")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("LaserParticlesBottom:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("LaserTip:region_rect")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Rect2( 1418, 0, 14, 24 ), Rect2( 1418, 0, 14, 24 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("LaserTip:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1425, 0 ), Vector2( 1425, 0 ), Vector2( 23, 0 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("LaserBody:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 709, 0 ), Vector2( 709, 0 ), Vector2( 8, 0 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("LaserBody:region_rect")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Rect2( 0, 0, 1418, 24 ), Rect2( 0, 0, 1418, 24 ), Rect2( 0, 0, 16, 24 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("LaserTip:modulate:a")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("LaserBody:modulate:a")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("BottomRaycast:cast_to")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1430, 0 ), Vector2( 1430, 0 ), Vector2( 10, 0 ) ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("TopRaycast:cast_to")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1430, 0 ), Vector2( 1430, 0 ), Vector2( 10, 0 ) ]
}
tracks/12/type = "method"
tracks/12/path = NodePath(".")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "start_fade_out_sfx"
}, {
"args": [  ],
"method": "_on_AnimationPlayer_fadeout_finished"
} ]
}

[sub_resource type="Animation" id=2]
length = 0.3
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "start_idle_timer"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("LaserBody:region_rect")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Rect2( 0, 0, 16, 24 ), Rect2( 0, 0, 1418, 24 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("LaserBody:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 8, 0 ), Vector2( 709, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("LaserTip:region_rect")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 1418, 0, 14, 24 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("LaserTip:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 23, 0 ), Vector2( 1425, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("LaserParticlesTop:modulate:a")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("LaserParticlesBottom:modulate:a")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("LaserBody:modulate:a")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("LaserTip:modulate:a")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("LaserParticlesBottom:emitting")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("LaserParticlesTop:emitting")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("LaserBody:scale")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("LaserTip:scale")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("TopRaycast:cast_to")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 10, 0 ), Vector2( 1430, 0 ) ]
}
tracks/14/type = "value"
tracks/14/path = NodePath("BottomRaycast:cast_to")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 10, 0 ), Vector2( 1430, 0 ) ]
}
tracks/15/type = "method"
tracks/15/path = NodePath(".")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "play_fire_sfx"
} ]
}

[sub_resource type="Animation" id=3]
tracks/0/type = "value"
tracks/0/path = NodePath("LaserBody:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 0, 0, 1418, 24 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("LaserBody:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 709, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("LaserTip:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1425, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("LaserTip:region_rect")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 1418, 0, 14, 24 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("LaserTip:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1.5 ), Vector2( 1, 1 ), Vector2( 1, 1.5 ), Vector2( 1, 1 ), Vector2( 1, 1.5 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("LaserBody:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1.5 ), Vector2( 1, 1 ), Vector2( 1, 1.5 ), Vector2( 1, 1 ), Vector2( 1, 1.5 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("LaserParticlesBottom:modulate:a")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("LaserParticlesTop:modulate:a")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("LaserBody:modulate:a")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("LaserTip:modulate:a")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("TopRaycast:cast_to")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1430, 0 ) ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("BottomRaycast:cast_to")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1430, 0 ) ]
}
tracks/12/type = "method"
tracks/12/path = NodePath(".")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "play_loop_sfx"
} ]
}

[sub_resource type="Animation" id=4]
resource_name = "inactive"
length = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("LaserBody:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 0, 0, 16, 24 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("LaserBody:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 8, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("LaserTip:region_rect")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 1418, 0, 14, 24 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("LaserTip:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 23, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("LaserParticlesTop:modulate:a")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("LaserParticlesBottom:modulate:a")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("LaserBody:modulate:a")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("LaserTip:modulate:a")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("LaserParticlesTop:emitting")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("LaserParticlesBottom:emitting")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="ParticlesMaterial" id=5]
flag_disable_z = true
spread = 0.0
gravity = Vector3( 98, 0, 0 )
initial_velocity = 600.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0

[node name="Bullet" type="Node2D" groups=[
"bullet",
]]
z_index = 3
script = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "inactive"
anims/fadeout = SubResource( 1 )
anims/fire = SubResource( 2 )
anims/idle = SubResource( 3 )
anims/inactive = SubResource( 4 )
next/fire = "idle"
next/idle = "fadeout"
blend_times = [ "fire", "idle", 0.05, "idle", "fadeout", 0.05 ]

[node name="Tween" type="Tween" parent="."]

[node name="IdleTimer" type="Timer" parent="."]
wait_time = 0.7

[node name="SfxLibrary" type="Node" parent="."]

[node name="Fire" type="AudioStreamPlayer" parent="SfxLibrary"]
stream = ExtResource( 5 )
volume_db = -15.0
bus = "UiSfx"
script = ExtResource( 4 )

[node name="Loop" type="AudioStreamPlayer" parent="SfxLibrary"]
stream = ExtResource( 6 )
volume_db = -24.0
pitch_scale = 0.4
bus = "UiSfx"
script = ExtResource( 4 )

[node name="LaserBody" type="Sprite" parent="."]
position = Vector2( 709, 0 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 0, 0, 1418, 24 )

[node name="LaserTip" type="Sprite" parent="."]
position = Vector2( 1425, 0 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 1418, 0, 14, 24 )

[node name="LaserParticlesTop" type="Particles2D" parent="."]
position = Vector2( 0, -5 )
amount = 15
lifetime = 2.3
process_material = SubResource( 5 )
texture = ExtResource( 3 )

[node name="LaserParticlesBottom" type="Particles2D" parent="."]
position = Vector2( 0, 4 )
amount = 15
lifetime = 2.3
process_material = SubResource( 5 )
texture = ExtResource( 3 )

[node name="TopRaycast" type="RayCast2D" parent="."]
position = Vector2( 0, -14 )
enabled = true
cast_to = Vector2( 1430, 0 )
collision_mask = 4

[node name="BottomRaycast" type="RayCast2D" parent="."]
position = Vector2( 0, 14 )
enabled = true
cast_to = Vector2( 1430, 0 )
collision_mask = 4
[connection signal="timeout" from="IdleTimer" to="." method="_on_IdleTimer_timeout"]
